--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div class="row text-white">
                     <div>
                       <div class="row d-flex align-items-center justify-content-center my-5">
-                        <div class="col-lg-6 col-md-6 mx-auto">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6  mx-auto">
                             <div class="text-center">    
                                 <img style="border-radius: 50%;" class="text-white bg-white" src="img/call.png">
                             </div><br>
@@ -233,7 +233,7 @@
                                 07883388370  </p> 
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-6 mx-auto  ">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-6  mx-auto  ">
                             <div class="text-center">    
                                 <img style="border-radius: 50%;" class="text-white bg-white" src="img/location.png">
                             </div><br>
