--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a class="nav-link" href="#">Home</a>
                       </li>
                       <li class="nav-item m-2 text-white">
-                        <a class="nav-link" href="#">Money Transfer</a>
+                        <a class="nav-link" href="money_transfer.html">Money Transfer</a>
                       </li>
                       <li class="nav-item m-2 text-white">
                         <a class="nav-link" href="#">Cargo Service</a>
@@ -78,7 +78,7 @@
                         <a class="nav-link" href="#">Hajj & Umrah </a>
                       </li>
                       <li class="nav-item m-2">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="index.html">About Us</a>
                       </li>
                       <li class="nav-item m-2">
                         <a class="nav-link" href="#">Contact Us</a>
